first attempt at removing opengl